Prevent using uninitialized ui widgets

BUG: 484454
FIXED-IN: 5.2